# swarm_test

./: Cargo.toml  README.md
.hive/: issues.jsonl
.opencode/prompts/: %17.prompt.input
docs/: API.md
src/: error.rs  lib.rs  main.rs  session_mapping.rs  types.rs
src/cli/: commands.rs  commands.rs.bak  main.rs  mod.rs
src/messaging/: filter.rs  mod.rs  parser.rs  queue.rs  read.rs  send.rs
src/opencode/: client.rs  discovery.rs  mod.rs  protocol.rs  reader.rs  sender.rs  session.rs
src/tmux/: cli.rs  mod.rs  pane.rs  session.rs  window.rs
tests/: integration_test.rs
