[package]
name = "swarm_test"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"
chrono = "0.4"
regex-lite = "0.1"
opencode-ai-plugin = { version = "1.1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
dirs = "5.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
opencode = ["dep:reqwest", "dep:dirs", "dep:tokio"]
